--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -1,12 +1,15 @@
 <header>
+<a href="/"><h1>Natalie Dixon</h1></a>
+<em>Visionary oil painter & surreal illustrator </em>
   <ul class="nav">
     <li>
-      <a href="/">home<small>where the heart is</small></a>
+      <a href="/gallery">Artwork</a>
     </li>
     <li>
-      <a href="/about">about<small>all about this</small></a>
+      <a href="/about">About</a>
+    </li>
+    <li>
+      <a href="/contact">Contact</a>
     </li>
   </ul>
-  <h1>{{ title }}</h1>
-  {%- if subtitle %}<p class="subtitle">{{ subtitle | safe }}</p>{% endif %}
 </header>
