--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -3,16 +3,18 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Open+Sans:ital,wght@0,400;0,600;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <title>{{ title }}</title>
   </head>
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
 
-    <div class="container">
-      {% include "header.njk" %}
-      {{ content | safe }}
-      {% include "footer.njk" %}
-    </div>
+   {% include "header.njk" %}
+   <main>
+   {{ content | safe }}
+   </main>
+  {% include "footer.njk" %}
+
 
     {% set js %}
       {% include "js/core.js" %}
