--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -1,6 +1,6 @@
 <header>
 <a href="/"><h1>Natalie Dixon</h1></a>
-<em>Visionary oil painter & surreal illustrator </em>
+<em>Slices of soul in paint and ink</em>
   <ul class="nav">
     <li>
       <a href="/gallery">Artwork</a>
