--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Julius+Sans+One&family=Lato:ital,wght@0,300;0,700;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/styles.css">
     <title>{{ title }}</title>
+    <link rel="shortcut icon" type="image/png" href="/images/favicon.png"/>
   </head>
   <body {% if bodyClass %}class="{{ bodyClass }}"{% endif %}>
 
