--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -8,6 +8,8 @@ layout: layouts/standard.njk
 <img class="me" src="{{ '/images/me.png' | url }}" />
 <p><strong>Natalie Dixon</strong> is a self-taught artist based in London, UK. Her childhood mainly involved drawing pictures and writing words next to them; not much has changed.  After years of dabbling in various mediums, and being inspired (and intimidated) by the visionary art on display at trance festivals and Burning Man events, she began oil painting after attending a Visionary Art seminar run by <a href="https://www.danielmirante.com/">Daniel Mirante</a>. She now crams her room with an impractical number of canvases and convinces herself that still more are needed.  </p>
 </div>
+<div class="statement">
 <h3>Artist's Statement</h3>
 <p>Art is necessary for me as play, and like most play it’s also serious. A recurrent theme is the pain and hope of transformation: I hope to honestly express the darks and lights of my experience, and to produce work that invites (with compassion) similar honesty in others. I approach inner reality by way of the fantastic or symbolic, drawing on mythology and nature to pursue themes of rebirth, loss and healing, and I aim, through tonal contrasts and flowing lines, to convey always the potential for change. Inspired by the Visionary Art movement to blend internal and external worlds, and by animation and comic art to capture the essence of a movement or feeling, I hope to avoid the “easy answers” of saccharine visions or comic book heroes: the flux in us is the flux of nature, bloody and beautiful. </p>
 </section>
+</div>
