--- a/src/site/_includes/postcss/styles.css
+++ b/src/site/_includes/postcss/styles.css
@@ -58,7 +58,7 @@ h1, h2, h3 {
   font-family: 'Julius Sans One', sans-serif;
 }
 h1 {
-  font-size: 0.2em;
+  font-size: 1.8em;
   margin-top: 0.2em;
   margin-bottom: 0.2em;
   line-height: 1;
@@ -103,11 +103,15 @@ a {
 }
 
 .nav {
-  padding-top: 1em;
-  padding-bottom: 1em;
+  padding-top: 0.8em;
+  padding-bottom: 0.8em;
   text-transform: uppercase;
   font-weight: 500;
   color: $nav-color;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
 
   li {
     display: inline;
@@ -126,6 +130,11 @@ a {
       border-bottom-style: none;
       color: #fff;
   }
+
+  @media (min-width: $mid) {
+    flex-direction: row;
+  }
+
 }
 
 
@@ -199,7 +208,11 @@ label {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 400px;
+
+@media (min-width: $mid) {
   width: 500px;
+}
 }
 
 input {
@@ -245,10 +258,18 @@ button, .button {
   }
 }
 
+.strapline {
+  font-size: 0.9em;
+}
+
 .gallery {
   display: grid;
-  grid-template-columns: repeat(3, 33%);
+  grid-template-columns: repeat(1, 100%);
   padding: 20px 10px;
+
+  @media (min-width: $mid) {
+    grid-template-columns: repeat(3, 33.3%);
+  }
 
   figure {
     display: flex;
@@ -276,7 +297,10 @@ button, .button {
 
 .gallery__wrapper {
   overflow: hidden;
-  height: 400px;
+
+  @media (min-width: $mid) {
+    height: 400px;
+  }
 }
 
 .gallery__image {
@@ -308,6 +332,7 @@ button, .button {
   padding: 0;
   align-items: center;
   border-bottom: 2px solid silver;
+  overflow: hidden;
 
   li {
     height: 480px;
@@ -340,8 +365,9 @@ button, .button {
   margin: 2em auto 0;
   position: relative;
   border: 1px solid silver;
-
-
+  @media (max-width: $mid) {
+     padding-top: 3em;
+  }
 
   &:before {
      content: "";
@@ -372,7 +398,7 @@ button, .button {
 .easel__item {
   display: flex;
   align-items: center;
-  min-width: 100%;
+  width: 0;
   justify-content: flex-start;
   opacity: 0;
   position: absolute;
@@ -408,6 +434,7 @@ button, .button {
   opacity: 1;
   position: relative;
   z-index: 900;
+  min-width: 100%;
 }
 
 .easel__item.prev,
@@ -489,32 +516,76 @@ img {
 .about {
   display: flex;
   align-items: center;
-  text-align: left;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1em;
+  padding-bottom: 0;
+
+  @media (min-width: $mid) {
+    flex-direction: row;
+    text-align: left;
+    padding: 0;
+  }
+}
+
+.statement {
+  padding: 2em;
+  padding-top: 0;
+
+  @media (min-width: $mid-2) {
+    padding: 0;
+  }
 }
 
 .contact {
   display: flex;
   align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  padding: 1em;
+
+@media (min-width: $mid) {
+  flex-direction: row;
+  text-align: left;
+  padding: 0;
+}
 }
 
 .contact-image {
   border-radius: 50%;
-  margin-left: 2em;
+  height: 300px;
+  width: 300px;
+
+@media (min-width: $mid) {
   height: 400px;
   width: 400px;
+  margin-left: 2em;
+
+}
+
 }
 
 .artpage {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  padding: 2em;
+
+@media (min-width: $mid) {
   margin: 2em 0;
+  flex-direction: row;
+  padding: 0;
+  justify-content: flex-start;
+}
 }
 
 .artpage__image {
   max-height: 600px;
   width: auto;
+@media (min-width: $mid) {
   margin-right: 2em;
+}
 }
 
 .artpage__image--wide {
