Misc renames and adjustments

--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -5,7 +5,7 @@ data: descriptions
 <section>
 <article>
 <ul class="featured">
- {% for image in collections.gallery %}
+ {% for image in collections.gallery | sort(descriptions[image.name].featuredOrder) %}
 {% if descriptions[image.name].featured %}
 <li><a href="/artwork/{{image.name}}"><img src="{{ image.path | relative | url }}" class="home-item__image artwork" /></a></li>
 {% endif %}
