Add paging, remove filter and more styling changes

--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -1,4 +1,5 @@
 <footer>
+<a class="instagram" href="https://instagram.com/nataliedixon_art/"><img src="/images/insta.png" class="instagram__img" /></a>
 <p>
   Copyright Natalie Dixon {{ site.buildTime | dateDisplay('yyyy') }}
 </p>
