--- a/src/site/gallery.njk
+++ b/src/site/gallery.njk
@@ -1,16 +1,15 @@
 ---
-title: Gallery
 layout: layouts/standard.njk
 data: descriptions
 ---
 <article class="gallery-featured">
-<a class="gallery__link" href="/artwork/weepheal">
+<a class="gallery__link" href="/artwork/in-their-arms">
 <figure class="gallery__figure gallery__figure--featured">
 <div class="gallery__wrapper--featured">
-<img src="{{ '/images/gallery/weepheal.jpg' | url }}" class="artwork gallery__image" />
+<img src="{{ '/images/gallery/in-their-arms.jpg' | url }}" class="artwork gallery__image" />
 </div>
 <figcaption>
-<h4 class="gallery__name">Featured: WeepHeal</h4>
+<h4 class="gallery__name">Featured: In Their Arms</h4>
 <em class="gallery__format">Oils on canvas</em>
 </figcaption>
 </figure>
