Add Web of Being

--- a/src/site/gallery.njk
+++ b/src/site/gallery.njk
@@ -3,14 +3,14 @@ layout: layouts/standard.njk
 data: descriptions
 ---
 <article class="gallery-featured">
-<a class="gallery__link" href="/artwork/in-their-arms">
+<a class="gallery__link" href="/artwork/web-of-being">
 <figure class="gallery__figure gallery__figure--featured">
 <div class="gallery__wrapper--featured">
-<img src="{{ '/images/gallery/in-their-arms.jpg' | url }}" class="artwork gallery__image" />
+<img src="{{ '/images/gallery/web-of-being.jpg' | url }}" class="artwork gallery__image" />
 </div>
 <figcaption>
-<h4 class="gallery__name">Featured: In Their Arms</h4>
-<em class="gallery__format">Oils on canvas</em>
+<h4 class="gallery__name">Featured: Web of Being</h4>
+<em class="gallery__format">Acrylics on linen</em>
 </figcaption>
 </figure>
 </a>
