--- a/src/site/gallery.njk
+++ b/src/site/gallery.njk
@@ -6,7 +6,7 @@ data: descriptions
 <a class="gallery__link" href="/artwork/web-of-being">
 <figure class="gallery__figure gallery__figure--featured">
 <div class="gallery__wrapper--featured">
-<img src="{{ '/images/gallery/web-of-being.jpg' | url }}" class="artwork gallery__image" />
+<img src="{{ '/images/gallery/web-of-being@1x.jpg' | url }}" class="artwork gallery__image" />
 </div>
 <figcaption>
 <h4 class="gallery__name">Featured: Web of Being</h4>
