Add shop link and remove references to old private registry

--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -11,5 +11,8 @@
     <li>
       <a href="/contact">Contact</a>
     </li>
+    <li>
+      <a href="https://www.etsy.com/uk/shop/NatalieDixonArt">Shop</a>
+    </li>
   </ul>
 </header>
