--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -1,6 +1,6 @@
 <header>
 <a href="/"><h1>Natalie Dixon</h1></a>
-<em class="strapline">Sheddings of soul in paint and ink</em>
+<div class="nav-container">
   <ul class="nav">
     <li>
       <a href="/gallery">Artwork</a>
@@ -15,4 +15,6 @@
       <a href="https://www.etsy.com/uk/shop/NatalieDixonArt">Shop</a>
     </li>
   </ul>
+  <a class="instagram" href="https://instagram.com/nataliedixon_art/"><img src="/images/insta.png" class="instagram__img" /></a>
+</div>
 </header>
