--- a/src/site/_includes/header.njk
+++ b/src/site/_includes/header.njk
@@ -1,5 +1,5 @@
 <header>
-<a href="/"><h1>Natalie Dixon</h1></a>
+<a class="header-link" href="/"><img class="logo" src="/images/logo.png" /><h1>Natalie Dixon</h1></a>
 <div class="nav-container">
   <ul class="nav">
     <li>
