--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -6,10 +6,24 @@ layout: layouts/standard.njk
 <section>
 <div class="about">
 <img class="me" src="{{ '/images/me.png' | url }}" />
-<p><strong>Natalie Dixon</strong> is a self-taught artist based in London, UK. Her childhood mainly involved drawing pictures and writing words next to them; not much has changed.  After years of dabbling in various mediums, and being inspired (and intimidated) by the visionary art on display at trance festivals and Burning Man events, she began oil painting after attending a Visionary Art seminar run by <a href="https://www.danielmirante.com/">Daniel Mirante</a>. She now crams a London room with an impractical number of canvases and keeps buying more.  </p>
+<p>
+<strong>Natalie Dixon</strong> is a self-taught artist based in London, UK. Her childhood mainly involved drawing pictures and writing words next to them; not much has changed. An English degree developed an early love of stories and mythology, but led to an unfortunate suppression of her visual essence. In 2019, however, a personal crisis revealed that some things are beyond words. An emotional landscape unfolded, and she began painting in earnest, drawing on a palette discovered in earlier travels: the breadth and beauty of nature, and the world of visionary and psychedelic art. After attending workshops run by artists <a href="https://www.danielmirante.com/">Daniel Mirante</a> and <a href="https://www.amandasage.com/">Amanda Sage</a>, she began a life-long work of integration, mapping nature to emotion, soul to matter, and stories to the human form.</p>
 </div>
-<div class="statement">
+<p>Since 2020 her work has featured in several online exhibitions, including the 2021 In the Wild exhibition hosted by The Artist Lounge, in which her work ‘In their arms’ was a semi-finalist. She exhibits in person at festivals (Something Different, Lovejam Campout, Anthropos) , enjoying the opportunity for inspiration and direct connection. Working in oils and acrylic, she explores the link between the outer world and inner truths, and the mythic nature of individual transformation.
+   </p>
 <h3>Artist Statement</h3>
-<p>Art is necessary for me as play, and like most play it’s also serious. I believe that the most important parts of life can only be approached indirectly, through storytelling and image-making. We understand our own transformations by seeing them reflected back at us. In that spirit I hope to honestly express the darks and lights of my experience, and to produce work that invites similar honesty in others. I draw on mythology and nature to pursue themes of rebirth, loss and healing, and I aim, through tonal contrasts and flowing lines, to convey always the potential for change. Inspired by the Visionary Art movement to blend internal and external worlds, and by animation and comic art to capture the essence of a movement or feeling, I hope to avoid the possible ‘easy answers’ of those traditions, and to tell the truth: the flux in us is the flux of nature, beautiful yet bloody. </p>
+
+<div class="about">
+
+<div>
+<p>I paint in response to emotion. My paintings are acts of honesty that provoke honesty in turn: a real response in the viewer, a feeling or a memory. I paint because I can only understand my experiences through image-making, and want to transmit that understanding. Surrealism, fantastic realism, visionary art and Jungian psychology are all major influences because metaphor allows me to touch the personal and make it general. I endeavour to find the ‘archetype’ of the experience, and often switch between layered indirect techniques (a variant of the Misch technique common in visionary art, as documented by Brigid Marlin) to communicate the numinous, and direct painting to express the concrete.</p>
+
+   <p>Secondarily I paint from a joy in the rhythm of the human body, and from a wonder at the shifting of light and shadow over a mountainside, and from grief at an achingly brilliant yet transient sky… It’s all emotion, manifested.</p>
+
+</div>
+<img class="anthropos" src="{{ '/images/anthropos.jpg' | url }}" />
+</div>
+   <p>I draw on mythology, esoteric symbolism and nature to pursue themes of rebirth, loss and healing, and through tonal contrasts and flowing lines, I convey the potential for change - the motion ever-present in our hearts and in the world around us. Inspired by the visionary art movement to blend internal and external worlds, and by animation and comic art to capture the essence of a movement or feeling, I hope to avoid the possible ‘easy answers’ of those traditions, and to tell the truth: the flux in us is the flux of nature, beautiful yet bloody.</p>
+
 </section>
 </div>
