--- a/src/site/contact.njk
+++ b/src/site/contact.njk
@@ -4,18 +4,7 @@ layout: layouts/standard.njk
 ---
 
 <article class="contact">
-<form name="contact" method="POST" data-netlify="true">
-  <p>
-    <label>Name <input type="text" name="name" /></label>
-  </p>
-  <p>
-    <label>Email <input type="email" name="email" /></label>
-  </p>
-  <p>
-    <label>Message: <textarea name="message" rows="10"></textarea></label>
-  </p>
-  <button type="submit">Send</button>
-</form>
+<p>I am available for commissions, festival gallery and live painting bookings. Please contact me through one of my social media accounts (<a href="https://instagram.com/nataliedixon_art/">Instagram</a> or <a href="https://www.facebook.com/nataliedixonart/">Facebook</a>), or drop me an <a href="mailto:natalie.dixon@cantab.net">email</a>.</p>
 <img src="/images/painting.jpg" alt="Natalie at work painting" class="contact-image" />
 </article>
 
