--- a/src/site/about.njk
+++ b/src/site/about.njk
@@ -16,9 +16,9 @@ layout: layouts/standard.njk
 <div class="about">
 
 <div>
-<p>I paint in response to emotion. My paintings are acts of honesty that provoke honesty in turn: a real response in the viewer, a feeling or a memory. I paint because I can only understand my experiences through image-making, and want to transmit that understanding. Surrealism, fantastic realism, visionary art and Jungian psychology are all major influences because metaphor allows me to touch the personal and make it general. I endeavour to find the ‘archetype’ of the experience, and often switch between layered indirect techniques (a variant of the Misch technique common in visionary art, as documented by Brigid Marlin) to communicate the numinous, and direct painting to express the concrete.</p>
+<p>I paint in response to emotion. My paintings are acts of honesty that provoke honesty in turn: a real response in the viewer, a feeling or a memory. I paint because I can only understand my experiences through image-making, and want to transmit that understanding. Surrealism, fantastic realism, visionary art and Jungian psychology are all major influences because metaphor allows me to touch the personal and make it general. They are tools that help unveil the real magic of life. I endeavour to find the ‘archetype’ of the experience, and often switch between layered indirect techniques to communicate the numinous, and direct painting to express the concrete.</p>
 
-   <p>Secondarily I paint from a joy in the rhythm of the human body, and from a wonder at the shifting of light and shadow over a mountainside, and from grief at an achingly brilliant yet transient sky… It’s all emotion, manifested.</p>
+<p>I also paint from a joy in the rhythm of the human body, and from a wonder at the shifting of light and shadow over a mountainside, and from grief at an achingly brilliant yet transient sky… It’s all emotion, manifested.</p>
 
 </div>
 <img class="anthropos" src="{{ '/images/anthropos.jpg' | url }}" />
